ref: activity to fragment

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,7 +17,7 @@
         android:title="@string/title_notifications" />
 
     <item
-        android:id="@+id/navigation_login"
+        android:id="@+id/navigation_logout"
         android:icon="@drawable/logout_black"
         android:title="Logout" />
 </menu>
