--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="gray_300">#929393</color>
     <color name="gray_600">#666666</color>
     <color name="red_500">#E84040</color>
+    <color name="colorNavBackground">#FFFFFF</color> <!-- Navbar Background -->
+    <color name="colorNavSelected">#0051A0</color> <!-- Selected Item -->
+    <color name="colorNavUnselected">#D3D4D4</color> <!-- Unselected Item -->
 </resources>
