--- a/app/src/main/res/layout/toolbar_home.xml
+++ b/app/src/main/res/layout/toolbar_home.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:textSize="9sp"
             android:textColor="@color/gray_200"
+            android:textAlignment="textEnd"
             android:layout_marginEnd="12dp"
             android:text="PBC3225A30142 SN\n10362516 TID\nF2023.3.5.2.4 Ver"
             tools:ignore="RtlCompat"/>
