--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -7,25 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.dashboard.DashboardFragment">
 
-    <!-- Topbar -->
-    <include
-        android:id="@+id/home_toolbar"
-        layout="@layout/toolbar_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
     <TextView
         android:id="@+id/textViewTitlePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:text="Password"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/home_toolbar"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_marginTop="16dp"/>
 
     <!-- Password field with visibility toggle -->
     <androidx.constraintlayout.widget.ConstraintLayout
