--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -45,7 +45,7 @@
             android:layout_height="24dp"
             android:layout_marginEnd="12dp"
             android:layout_centerVertical="true"
-            android:src="@drawable/eye_on"
+            android:src="@drawable/ic_eye_on"
             android:clickable="true"
             android:focusable="true"
             android:contentDescription="Toggle Password Visibility"
