--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -70,7 +70,7 @@
                 android:layout_height="24dp"
                 android:layout_marginEnd="12dp"
                 android:layout_centerVertical="true"
-                android:src="@drawable/eye_on"
+                android:src="@drawable/ic_eye_on"
                 android:clickable="true"
                 android:focusable="true"
                 android:contentDescription="Toggle Password Visibility"
@@ -95,7 +95,7 @@
         <!-- login button -->
         <Button
             android:id="@+id/buttonLogin"
-            android:background="@drawable/custom_button"
+            android:background="@drawable/bg_blue_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
