--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -14,7 +14,7 @@
         android:id="@+id/splash_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/splash_onboard"
+        android:src="@drawable/logo_splash_onboard"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:visibility="gone"
-        android:background="@drawable/white_box_shadow"
+        android:background="@drawable/bg_white_box_shadow"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
             android:id="@+id/progress_bar"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/loading_state"
+            android:src="@drawable/ic_loading_state"
             android:layout_gravity="center"/>
     </FrameLayout>
 
