--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -18,6 +18,6 @@
 
     <item
         android:id="@+id/navigation_logout"
-        android:icon="@drawable/logout_black"
+        android:icon="@drawable/ic_logout_black"
         android:title="Logout" />
 </menu>
